--- a/RentalVideo/Views/Home/Index.cshtml
+++ b/RentalVideo/Views/Home/Index.cshtml
@@ -1,7 +1,31 @@
-﻿@section SPAViews {
-    @Html.Partial("_Home")
+﻿@{
+    Layout = null;
 }
-@section Scripts{
-    @Scripts.Render("~/bundles/knockout")
-    @Scripts.Render("~/bundles/app")
-}
+<!DOCTYPE html>
+<html ng-app="rentalVideo">
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Home Cinema</title>
+    @Styles.Render("~/Content/css")
+    @Scripts.Render("~/bundles/modernizr")
+</head>
+<body ng-controller="rootController">
+    <top-bar></top-bar>
+    <div class="row-offcanvas row-offcanvas-left">
+        <side-bar></side-bar>
+        <div id="main">
+            <div class="col-md-12">
+                <p class="visible-xs">
+                    <button type="button" class="btn btn-primary btn-xs" data-toggle="offcanvas">
+                        <i class="glyphicon glyphicon-chevron-left"></i>
+                    </button>
+                </p>
+                <div class="page {{pageClass}}" ng-view></div>
+            </div>
+        </div>
+    </div>
+    @Scripts.Render("~/bundles/vendors")
+    @Scripts.Render("~/bundles/spa")
+</body>
+</html>
